--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,12 @@
   <link rel="stylesheet" href="./Assets/Styles/css/demo.css" />
 </head>
 
+<style>
+  .w-10 {
+    width: 10% ;
+  }
+</style>
+
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
