--- a/public/index.html
+++ b/public/index.html
@@ -3,30 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="icon" href="%PUBLIC_URL%/Assets/Images/huong-sen-logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-
-  <title>React App</title>
-
+  <title>Dashboard - Nhà Hàng Hương Sen</title>
   <!-- Fonts and icons -->
-  <script src="./Assets/Styles/js/plugin/webfont/webfont.min.js"></script>
+  <script src="%PUBLIC_URL%/Assets/Styles/js/plugin/webfont/webfont.min.js"></script>
   <script>
     WebFont.load({
       google: { families: ["Public Sans:300,400,500,600,700"] },
@@ -37,106 +21,45 @@
           "Font Awesome 5 Brands",
           "simple-line-icons",
         ],
-        urls: ["./Assets/Styles/css/fonts.min.css"],
+        urls: ["%PUBLIC_URL%/Assets/Styles/css/fonts.min.css"],
       },
       active: function () {
         sessionStorage.fonts = true;
       },
     });
   </script>
-
   <!-- CSS Files -->
-  <link rel="stylesheet" href="./Assets/Styles/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="./Assets/Styles/css/plugins.min.css" />
-  <link rel="stylesheet" href="./Assets/Styles/css/kaiadmin.min.css" />
-
-  <!-- CSS Just for demo purpose, don't include it in your project -->
-  <link rel="stylesheet" href="./Assets/Styles/css/demo.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/Assets/Styles/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/Assets/Styles/css/plugins.min.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/Assets/Styles/css/kaiadmin.min.css" />
 </head>
-
-<style>
-  .w-10 {
-    width: 10% ;
-  }
-</style>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-
-    <!--   Core JS Files   -->
-    <script src="./Assets/Styles/js/core/jquery-3.7.1.min.js"></script>
-    <script src="./Assets/Styles/js/core/popper.min.js"></script>
-    <script src="./Assets/Styles/js/core/bootstrap.min.js"></script>
-
-    <!-- jQuery Scrollbar -->
-    <script src="./Assets/Styles/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
-
-    <!-- Chart JS -->
-    <script src="./Assets/Styles/js/plugin/chart.js/chart.min.js"></script>
-
-    <!-- jQuery Sparkline -->
-    <script src="./Assets/Styles/js/plugin/jquery.sparkline/jquery.sparkline.min.js"></script>
-
-    <!-- Chart Circle -->
-    <script src="./Assets/Styles/js/plugin/chart-circle/circles.min.js"></script>
-
-    <!-- Datatables -->
-    <script src="./Assets/Styles/js/plugin/datatables/datatables.min.js"></script>
-
-    <!-- Bootstrap Notify -->
-    <script src="./Assets/Styles/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
-
-    <!-- jQuery Vector Maps -->
-    <script src="./Assets/Styles/js/plugin/jsvectormap/jsvectormap.min.js"></script>
-    <script src="./Assets/Styles/js/plugin/jsvectormap/world.js"></script>
-
-    <!-- Sweet Alert -->
-    <script src="./Assets/Styles/js/plugin/sweetalert/sweetalert.min.js"></script>
-
-    <!-- Kaiadmin JS -->
-    <script src="./Assets/Styles/js/kaiadmin.min.js"></script>
-
-    <!-- Kaiadmin DEMO methods, don't include it in your project! -->
-    <script>
-      $("#lineChart").sparkline([102, 109, 120, 99, 110, 105, 115], {
-        type: "line",
-        height: "70",
-        width: "100%",
-        lineWidth: "2",
-        lineColor: "#177dff",
-        fillColor: "rgba(23, 125, 255, 0.14)",
-      });
-
-      $("#lineChart2").sparkline([99, 125, 122, 105, 110, 124, 115], {
-        type: "line",
-        height: "70",
-        width: "100%",
-        lineWidth: "2",
-        lineColor: "#f3545d",
-        fillColor: "rgba(243, 84, 93, .14)",
-      });
-
-      $("#lineChart3").sparkline([105, 103, 123, 100, 95, 105, 115], {
-        type: "line",
-        height: "70",
-        width: "100%",
-        lineWidth: "2",
-        lineColor: "#ffa534",
-        fillColor: "rgba(255, 165, 52, .14)",
-      });
-    </script>
-
+  <!-- Core JS Files -->
+  <script src="%PUBLIC_URL%/Assets/Styles/js/core/jquery-3.7.1.min.js"></script>
+  <script src="%PUBLIC_URL%/Assets/Styles/js/core/popper.min.js"></script>
+  <script src="%PUBLIC_URL%/Assets/Styles/js/core/bootstrap.min.js"></script>
+  <!-- jQuery Scrollbar -->
+  <script src="%PUBLIC_URL%/Assets/Styles/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
+  <!-- Chart JS -->
+  <script src="%PUBLIC_URL%/Assets/Styles/js/plugin/chart.js/chart.min.js"></script>
+  <!-- jQuery Sparkline -->
+  <script src="%PUBLIC_URL%/Assets/Styles/js/plugin/jquery.sparkline/jquery.sparkline.min.js"></script>
+  <!-- Chart Circle -->
+  <script src="%PUBLIC_URL%/Assets/Styles/js/plugin/chart-circle/circles.min.js"></script>
+  <!-- Datatables -->
+  <script src="%PUBLIC_URL%/Assets/Styles/js/plugin/datatables/datatables.min.js"></script>
+  <!-- Bootstrap Notify -->
+  <script src="%PUBLIC_URL%/Assets/Styles/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
+  <!-- jQuery Vector Maps -->
+  <script src="%PUBLIC_URL%/Assets/Styles/js/plugin/jsvectormap/jsvectormap.min.js"></script>
+  <script src="%PUBLIC_URL%/Assets/Styles/js/plugin/jsvectormap/world.js"></script>
+  <!-- Sweet Alert -->
+  <script src="%PUBLIC_URL%/Assets/Styles/js/plugin/sweetalert/sweetalert.min.js"></script>
+  <!-- Kaiadmin JS -->
+  <script src="%PUBLIC_URL%/Assets/Styles/js/kaiadmin.min.js"></script>
 </body>
 
 </html>
